--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,50 @@ input[type="submit"]:hover {
     transform: scale(1);
   }
 }
+
+/* submit button */
+body,
+.button,
+.tick {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* font-family: sans-serif; */
+}
+
+body {
+  width: 100%;
+  height: 90vh;
+}
+
+.button {
+  border: none;
+  width: 90px;
+  height: 50px;
+  background: #4caf50;
+  border-radius: 6px;
+  transition: all 0.3s cubic-bezier(0.67, 0.17, 0.4, 0.83);
+}
+
+.button svg {
+  transform: rotate(180deg);
+  transition: all 0.5s;
+}
+
+.button__circle {
+  width: 50px;
+  height: 50px;
+  background: #4caf50;
+  border-radius: 50%;
+  transform: rotate(-180deg);
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.tick {
+  color: white;
+  font-size: 1.5em;
+  transition: all 0.9s;
+}
